docs/0.16/_sources/api/gammapy.modeling.models.SmoothBrokenPowerLawSpectralModel.rst.txt
SmoothBrokenPowerLawSpectralModel
=================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SmoothBrokenPowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SmoothBrokenPowerLawSpectralModel.amplitude
      ~SmoothBrokenPowerLawSpectralModel.beta
      ~SmoothBrokenPowerLawSpectralModel.default_parameters
      ~SmoothBrokenPowerLawSpectralModel.ebreak
      ~SmoothBrokenPowerLawSpectralModel.index1
      ~SmoothBrokenPowerLawSpectralModel.index2
      ~SmoothBrokenPowerLawSpectralModel.parameters
      ~SmoothBrokenPowerLawSpectralModel.reference
      ~SmoothBrokenPowerLawSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SmoothBrokenPowerLawSpectralModel.__call__
      ~SmoothBrokenPowerLawSpectralModel.copy
      ~SmoothBrokenPowerLawSpectralModel.create
      ~SmoothBrokenPowerLawSpectralModel.energy_flux
      ~SmoothBrokenPowerLawSpectralModel.evaluate
      ~SmoothBrokenPowerLawSpectralModel.evaluate_error
      ~SmoothBrokenPowerLawSpectralModel.from_dict
      ~SmoothBrokenPowerLawSpectralModel.integral
      ~SmoothBrokenPowerLawSpectralModel.inverse
      ~SmoothBrokenPowerLawSpectralModel.plot
      ~SmoothBrokenPowerLawSpectralModel.plot_error
      ~SmoothBrokenPowerLawSpectralModel.spectral_index
      ~SmoothBrokenPowerLawSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: beta
   .. autoattribute:: default_parameters
   .. autoattribute:: ebreak
   .. autoattribute:: index1
   .. autoattribute:: index2
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
