docs/0.18.2/_sources/api/gammapy.modeling.models.SmoothBrokenPowerLawSpectralModel.rst.txt
SmoothBrokenPowerLawSpectralModel
=================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SmoothBrokenPowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SmoothBrokenPowerLawSpectralModel.amplitude
      ~SmoothBrokenPowerLawSpectralModel.beta
      ~SmoothBrokenPowerLawSpectralModel.covariance
      ~SmoothBrokenPowerLawSpectralModel.default_parameters
      ~SmoothBrokenPowerLawSpectralModel.ebreak
      ~SmoothBrokenPowerLawSpectralModel.index1
      ~SmoothBrokenPowerLawSpectralModel.index2
      ~SmoothBrokenPowerLawSpectralModel.is_norm_spectral_model
      ~SmoothBrokenPowerLawSpectralModel.parameters
      ~SmoothBrokenPowerLawSpectralModel.reference
      ~SmoothBrokenPowerLawSpectralModel.tag
      ~SmoothBrokenPowerLawSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~SmoothBrokenPowerLawSpectralModel.__call__
      ~SmoothBrokenPowerLawSpectralModel.copy
      ~SmoothBrokenPowerLawSpectralModel.create
      ~SmoothBrokenPowerLawSpectralModel.energy_flux
      ~SmoothBrokenPowerLawSpectralModel.energy_flux_error
      ~SmoothBrokenPowerLawSpectralModel.evaluate
      ~SmoothBrokenPowerLawSpectralModel.evaluate_error
      ~SmoothBrokenPowerLawSpectralModel.from_dict
      ~SmoothBrokenPowerLawSpectralModel.from_parameters
      ~SmoothBrokenPowerLawSpectralModel.integral
      ~SmoothBrokenPowerLawSpectralModel.integral_error
      ~SmoothBrokenPowerLawSpectralModel.inverse
      ~SmoothBrokenPowerLawSpectralModel.plot
      ~SmoothBrokenPowerLawSpectralModel.plot_error
      ~SmoothBrokenPowerLawSpectralModel.spectral_index
      ~SmoothBrokenPowerLawSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: beta
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: ebreak
   .. autoattribute:: index1
   .. autoattribute:: index2
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
